testsuite/tests/interpreter_errors/invalid_field_dot_access/test.out
main.adb
script:1:24: error: No field named nonExistingField on nodes of kind: CompilationUnit
1 | let p = query p when p.nonExistingField is ObjectDecl
  |                        ^^^^^^^^^^^^^^^^ 

